# Random-tests

./: .gitignore  CMakeLists.txt  README.md
include/components/: Camera.hpp  CameraComponent.hpp  Material.hpp  ModelComponent.hpp  Transform.hpp  TransformComponent.hpp
include/core/: ApplicationState.hpp  Camera.hpp  ECS.hpp  Engine.hpp  ImGUI.hpp  Input.hpp  InputManager.hpp  Window.hpp
include/core/ecs/: ComponentManager.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp
include/core/openGL/: Mesh.hpp  ShaderManager.hpp  VertexBufferLayout.hpp
include/engine/core/: Engine.hpp  EngineConfig.hpp  ResourceManager.hpp
include/engine/ecs/: ComponentArray.hpp  ECS.hpp  Types.hpp
include/engine/openGL/: IndexBuffer.hpp  Shader.hpp
include/entities/: Light.hpp
include/openGL/: Model.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
include/primitives/: Rectangle.hpp  Triangle.hpp
include/systems/: CameraSystem.hpp  ModelRenderSystem.hpp  RenderSystem.hpp
lib/glfw/: CMakeLists.txt
res/assets/car/: car.mtl
res/shaders/: basic.fragment  basic.vertex
src/: main.cpp
src/core/: camera.cpp  engine.cpp  imgui.cpp  input.cpp  window.cpp
src/core/openGL/: indexBuffer.cpp  shaderManager.cpp
src/engine/core/: engine.cpp  inputManager.cpp  resourceManager.cpp
src/engine/openGL/: model.cpp  shader.cpp
src/entities/: camera.cpp
src/openGL/: mesh.cpp  renderer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
src/systems/: cameraSystem.cpp  renderSystem.cpp
